# bchest

./: CMakeLists.txt  README.md
lib/: BaseAttribute.cpp  BasicAttribute.cpp  CMakeLists.txt  Character.cpp  CharacterAttribute.cpp  FixedAttribute.cpp  PrimaryAttribute.cpp  SecondaryAttribute.cpp  base_attribute.cpp
lib/include/: BaseAttribute.h  BasicAttribute.h  Character.h  CharacterAttribute.h  CharacterAttributeType.h  CharacterAttributes.h  FixedAttribute.h  PrimaryAttribute.h  SecondaryAttribute.h  base_attribute.h
lib/test/: CMakeLists.txt  test_character.cpp
